# ai_architect

./: .env  .gitignore  README.md  agents.py  app.py  callbacks.py  diagram_gen.py  graph.py  knowledge.py  main.py  model_factory.py  packages.txt  pyproject.toml  rag.py  schemas.py  storage.py  tools.py
.deepeval/: .deepeval_telemetry.txt
chroma_db/: chroma.sqlite3
chroma_db/ac47629f-d84c-45c1-babc-4a2ada6f1f22/: index_metadata.pickle
chroma_db/c3dfe79d-b378-4b13-9167-9aa74245641f/: index_metadata.pickle
output_project/generated_app/: README.md  docker-compose.yml  requirements.txt
output_project/generated_app/api/cdn/: endpoints.py
output_project/generated_app/services/cdn/: cdn_service.py
snapshots/: DOCUMENT COLLABORATION SYSTEM.json  INVENTORY MANAGEMENT SYSTEM.json  MUSIC STREAMING SERVICE.json  Run_1766368624.json  Run_1766369308.json  Run_1766370572.json  StockAnalyticsPlatform.json  URL Shortener.json  twitterapp.json
tests/: quality.py  test_evals.py
