[project]
name = "ai-architect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepeval>=3.7.6",
    "langchain-anthropic>=1.3.0",
    "langchain-google-genai>=4.1.2",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "langgraph-cli>=0.4.11",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "watchdog>=6.0.0",
    "giskard>=2.0.0", # NEW: AI Red Teaming
    "diagrams>=0.23.4", # NEW: Python Diagrams as Code
    "cookiecutter>=2.6.0", # NEW: Project Scaffolding
    "langchain-chroma>=0.1.2", # NEW: Vector Store
    "chromadb>=0.5.5",
    "sentence-transformers>=3.0.0",
    "unstructured[pdf]>=0.14.0", # NEW: PDF Loading
    "langchain-huggingface>=1.2.0",
    "langchain-community>=0.4.1",
    "ddgs>=9.10.0",
    "pyppeteer>=0.0.25",
    "playwright>=1.57.0",
]

